[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Character/Player_Bullet.gd" type="Script" id=1]
[ext_resource path="res://Audio/bulletFired.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Other/Spear_Bullet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=5]

[sub_resource type="Gradient" id=12]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.541936, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.0875 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.75
emission_shape = 2
emission_box_extents = Vector3( 12, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 6.0
linear_accel_random = 1.0
radial_accel = 0.05
scale = 0.2
scale_random = 0.2
scale_curve = SubResource( 11 )
color_ramp = SubResource( 13 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), -3.21531, 3.18182, 0, 0, Vector2( 0.580952, 0.809091 ), 0.218182, 0.218182, 0, 0, Vector2( 1, 0 ), -6.10908, -0.166008, 0, 0 ]

[sub_resource type="Gradient" id=3]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.285714, 0.871508, 1 )
colors = PoolColorArray( 0.451752, 0.625834, 0.882813, 0, 0.254902, 0.52549, 0.905882, 0.576471, 0.239216, 0.513726, 0.898039, 0.380392, 0, 0, 0, 0 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.99994
height = 50.0001

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.9999
height = 52.0002

[sub_resource type="CapsuleShape2D" id=14]
radius = 22.0
height = 56.0

[node name="Bullet_body" type="RigidBody2D"]
light_mask = 2
collision_layer = 5
collision_mask = 12
physics_material_override = SubResource( 5 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 1 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 5 )]
scale = Vector2( 40, 40 )

[node name="Collision_Vis" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.6, 1 )

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 524291
amount = 25
lifetime = 2.5
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 4 )

[node name="Bullet_Trail" type="Line2D" parent="."]
light_mask = 524290
width = 8.0
width_curve = SubResource( 4 )
default_color = Color( 0.501961, 0.580392, 0.713726, 1 )
gradient = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 524290
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 12.5
one_shot = true
autostart = true

[node name="Bullet_Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32777
collision_mask = 32896
monitorable = false

[node name="Area_Collision" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 10 )

[node name="boidRepel" type="StaticBody2D" parent="." groups=["collide"]]
collision_layer = 8192
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="boidRepel"]
rotation = 1.5708
shape = SubResource( 14 )

[node name="trailPos" type="Node2D" parent="."]
position = Vector2( 30, 0 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
area_mask = 0

[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="viewport_entered" from="Collision_Vis" to="." method="_on_Collision_Vis_viewport_entered"]
[connection signal="viewport_exited" from="Collision_Vis" to="." method="_on_Collision_Vis_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
